live-app-framework/web-starter/src/main/java/com/example/webstarter/Error/QiyuBaseError.java
package com.example.webstarter.Error;

/**
 * @version 1.0
 * @Author xiaolong
 * @Date 2025/10/3 15:18
 * @注释 我们自定义异常的接口规范
 */
public interface QiyuBaseError {
    int getErrorCode();
    String getErrorMsg();
}
